under construcction placeholder, with discord link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
-  <body>
-  GSA website goes here
-  </body>
+<head>
+    <title>The Glorious Sky Armada - official website</title>
+</head>
+<body>
+    <h1>The website for the Glorious Sky Armada is currently under construction, join our Discord: https://discord.gg/TCmtTTv  </h1>
+</body>
 </html>
